--- a/Web/Views/Claim/Index.cshtml
+++ b/Web/Views/Claim/Index.cshtml
@@ -10,8 +10,8 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
+<table class="table table-hover dataTable  table-striped table-responsive">
+    <tr >
         <th>
             @Html.DisplayNameFor(model => model.titreclaim)
         </th>
@@ -42,41 +42,49 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.titreclaim)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.descp)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.fich)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.comment)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.dateclose)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.dateopen)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.reponse)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.evaluation_id)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.user_id)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ReclmationID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ReclmationID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ReclmationID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.titreclaim)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.descp)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.fich)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.comment)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.dateclose)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.dateopen)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.reponse)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.evaluation_id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.user_id)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ReclmationID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ReclmationID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ReclmationID })
+            </td>
+        </tr>
+    }
 
 </table>
+<link rel="stylesheet" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css" />
+<script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
+<script src="//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('.table').dataTable();
+    });</script>
