--- a/Web/Views/Claim/Create.cshtml
+++ b/Web/Views/Claim/Create.cshtml
@@ -75,13 +75,13 @@
             </div>
         </div>*@
 
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.statut, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EnumDropDownListFor(model => model.statut, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.statut, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
 
 
     @*<div class="form-group">
