--- a/Web/Views/Claim/Index.cshtml
+++ b/Web/Views/Claim/Index.cshtml
@@ -7,77 +7,105 @@
 
 <h2>Index</h2>
 
+<style>
+    .search-panel {
+        position: center;
+        left: 80px;
+        top: auto;
+        background-color: #ced6e0;
+        height: auto;
+        align-items: center;
+        justify-content: center;
+        width: 500px;
+        padding: 60px;
+        text-align: center;
+        box-shadow: 0 0 20px #808080;
+    }
+</style>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+<br />
+@using (Html.BeginForm())
+{
+<div class="search-panel">
+    <div class="row">
+        <div> Matricule : </div>
+    </div>
+    <br />
+    <div class="row">
+        <div>
+            @Html.TextBox("searchstring")
+            
+        </div>
+    </div>
+    <br />
+    <div class="row">
+        <div>
+            <input type="submit" value="Rechercher" id="submit" /> <i class="fa fa-search"></i>
+        </div>
+    </div>
+</div>
+
+}
+<br />
+<br />
 <table class="table table-hover dataTable  table-striped table-responsive">
-    <tr >
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.ReclmationID)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.titreclaim)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.descp)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.fich)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.comment)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.dateclose)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.dateopen)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.reponse)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.evaluation_id)
+            @Html.DisplayNameFor(model => model.comment)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.user_id)
+            @Html.DisplayNameFor(model => model.statut)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.dateopen)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.evaluation_id)
         </th>
         <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.titreclaim)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.descp)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.fich)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.comment)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.dateclose)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.dateopen)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.reponse)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.evaluation_id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.user_id)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ReclmationID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ReclmationID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ReclmationID })
-            </td>
-        </tr>
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.ReclmationID)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.titreclaim)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.reponse)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.comment)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.statut)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.dateopen)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.evaluation_id)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id = item.ReclmationID }) |
+            @Html.ActionLink("Colture", "Delete", new { id = item.ReclmationID }) |
+        </td>
+    </tr>
     }
 
 </table>
