--- a/Web/Views/ClaimManager/Index.cshtml
+++ b/Web/Views/ClaimManager/Index.cshtml
@@ -2,11 +2,11 @@
 
 @{
     ViewBag.Title = "Index";
-    //Layout = "~/Views/Shared/_myLayout.cshtml";
+    Layout = "~/Views/Shared/_myLayout.cshtml";
 }
 
 <h2>Liste des reclamations</h2>
-<link hhref="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+<link hhref="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" src="~/css/dataTables.bootstrap.min.css" />
 <script type="text/javascript" src="~/js/dataTables.bootstrap.min.js"></script>
@@ -32,9 +32,10 @@
 
 
 
-<p><h1 class="open">  Ticket Ouverts / Resolu  </h1></p>
+<p><h1 class="open">  Ticket Ouverts   </h1></p>
+ @*table-striped table-responsive*@
 <div>
-    <table class="table table-hover dataTable  table-striped table-responsive" id="tab1">
+    <table class="table table-hover dataTable " id="tab1">
         <thead>
             <tr style="background-color:#3d566e; color:#ecf0f1">
                 <th>
@@ -97,7 +98,7 @@
                     @Html.DisplayFor(modelItem => item.dateopen)
                 </td>
                 <td>
-                   
+
                     <button class="btn btn-dark"><i class="fa fa-edit"></i> @Html.ActionLink("Edit", "Edit", new { id = item.ReclmationID })</button>
                 </td>
             </tr>
@@ -110,95 +111,94 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        $('.table').dataTable();   
+        $('.table').dataTable();
     });</script>
 
 
 
 <br><br />
-    <br><br />
-    <br><br />
-    <div><h1 id="close"> Ticket  En attente /clotures </h1></div>
+<br><br />
+<br><br />
+<div><h1 id="close"> Ticket  clotures </h1></div>
 
 
-    <table class="table table-hover dataTable  table-striped table-responsive">
-        <thead >
-            <tr style="background-color:#3d566e; color:#ecf0f1">
-                <th>
-                    @Html.DisplayNameFor(model => model.statut)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.user_id)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.evaluation_id)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.titreclaim)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.descp)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.fich)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.comment)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.reponse)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.dateclose)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.dateopen)
-                </th>
+<table class="table table-hover dataTable  table-striped table-responsive">
+    <thead>
+        <tr style="background-color:#3d566e; color:#ecf0f1">
+            <th>
+                @Html.DisplayNameFor(model => model.statut)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.user_id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.evaluation_id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.titreclaim)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.descp)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.fich)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.comment)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.reponse)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.dateclose)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.dateopen)
+            </th>
 
-                <th></th>
-            </tr>
-        </thead>
-        @foreach (var item in Model)
+            <th></th>
+        </tr>
+    </thead>
+    @foreach (var item in Model)
+    {
+        if (item.statut == 0)
         {
-            if (item.statut == o)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.statut)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.user_id)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.evaluation_id)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.titreclaim)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.descp)
-                    </td>
-
-                    <td>
-                        @Html.DisplayFor(modelItem => item.fich)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.comment)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.reponse)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.dateclose)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.dateopen)
-                    </td>
-                    <td>
-                        <button class="btn btn-dark"><i class="fa fa-edit"></i> @Html.ActionLink("Edit", "Edit", new { id = item.ReclmationID })</button>
-                    </td>
-                </tr>
-            }
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.statut)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.user_id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.evaluation_id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.titreclaim)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.descp)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.fich)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.comment)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.reponse)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.dateclose)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.dateopen)
+                </td>
+                <td>
+                    <button class="btn btn-danger"><i class="fa fa-edit"></i> @Html.ActionLink("DELETE", "Edit", new { id = item.ReclmationID })</button>
+                </td>
+            </tr>
         }
+    }
 
-    </table>
+</table>
